fuzzy-octo-tribble/Content/Game.css
.game-window {
    left:10px;
    right:10px;
    top:10px;
    bottom:10px;
    width:auto;
    height:auto;
    position:absolute;
    border: solid 2px black;
    overflow:hidden;
    background-color:#C0C0C0;
}

.game-map {
    width:100%;
    height:100%;
}

.map-square {
    position:absolute;
    height:40px;
    width:40px;
}

.text-font {
    font-size: 26px;
    font-family: 'Chau Philomene One', sans-serif;
}

.dialog-container {
    position:absolute;
    right: 20px;
    left: 20px;
    top: 65%;
    bottom:10%;
    background-color:#FFFFFF;
    border: solid 2px black;
    padding: 5px;
    overflow:hidden;
}

.menu-container {
    position:absolute;
    right: 3%;
    left: 75%;
    top:20px;
    bottom:20px;
    background-color:#FFFFFF;
    border: solid 2px black;
    padding: 15px;
    overflow: hidden;
}

.menu-item {
    width:100%;
    text-overflow:ellipsis;
    padding-top:15px;
    padding-left:5px;
    height:45px;
    cursor: pointer;
}

    .menu-item:hover {
        background-color:#C0C0C0;
    }

.gold-display {
    bottom: 10px;
    left: 10px;
    height:40px;
    width: 20%;
    position:absolute;
    background: #FFFFFF;
    border: 2px solid black;
    padding-left:10px;
}    

.menu-item-selected.menu-item {
    background-color: #767676;
}

    .menu-item-selected.menu-item:hover {
        background-color: #575757;
    }

.menu-title {
    cursor: auto;
}

    .menu-title:hover {
        background-color:inherit;
    }

.popup-screen {
    top:20%;
    bottom:20%;
    left:20%;
    right:20%;
    background-color:#FFFFFF;
    border: solid 2px black;
    padding: 15px;
    overflow: hidden;
    position:absolute;
}

.popup-screen-item {
    width:100%;
    text-overflow:ellipsis;
    padding-top:15px;
    padding-left:5px;
    min-height:45px;
    cursor: pointer;
}

    .popup-screen-item:hover {
        background-color:#C0C0C0;
    }
    
.popup-screen-item-selected.popup-screen-item {
    background-color: #767676;
}

    .popup-screen-item-selected.popup-screen-item:hover {
        background-color: #575757;
    }

.popup-screen-item-checked.popup-screen-item {
    background-color: #1B9AE8;
}

.popup-screen-item-checked.popup-screen-item-selected.popup-screen-item {
    background-color: #137CBD;
}

    .popup-screen-item-checked.popup-screen-item:hover {
        background-color: #41708D;
    }

.multi-select-done {
    height:auto;
    width:auto;
    position:absolute;
    bottom:20px;
    right:20px;
    border: solid 2px black;
    padding: 15px;
    background-color:#FFFFFF;
    cursor:pointer;
}

    .multi-select-done:hover {
        background-color: #41708D;
    }

.popup-screen-item-selected.multi-select-done {
    background-color: #767676;
}

    .popup-screen-item-selected.multi-select-done:hover {
        background-color: #575757;
    }

.character-display-screen {
    height:240px;
    width:200px;
    position:absolute;
    bottom:20px;
    background-color:#FFFFFF;
    border: solid 6px black;
    padding: 5px;
    overflow:hidden;
}

    .character-display-screen.enemy {
        top:20px;
        bottom:auto;
    }

.character-display-screen-selectable {
    cursor:pointer;
}

    .character-display-screen-selectable:hover {
        background-color:#C0C0C0;
    }

@media (max-width: 850px) {
    .text-font {
        font-size: 20px;
    }

    .menu-container {
        left: 60%;
        padding: 10px;
    }

    .menu-item {
        padding-top: 10px;
        padding-left: 3px;
        height: 35px;
    }

    .popup-screen {
        top: 10px;
        bottom: 10px;
        left: 10px;
        right: 10px;
    }

    .popup-screen-item {
        min-height: 55px;
    }

    .gold-display {
        height: 30px;
        width: 40%;
    }

    .character-display-screen {
        height: 180px;
        width: 120px;
    }
}
@media (max-width: 400px) {
    .text-font {
        font-size: 16px;
    }
    
    .menu-container {
        left: 50%;
        padding: 5px;
    }

    .menu-item {
        padding-top: 5px;
        padding-left: 1px;
        height: 25px;
    }

    .popup-screen {
        top: 10px;
        bottom: 10px;
        left: 10px;
        right: 10px;
    }

    .popup-screen-item {
        height:auto;
        min-height:45px;
    }

    .gold-display {
        height: 25px;
        width: 45%;
    } 

    .character-display-screen {
        height: 90px;
        width: 80px;
    }
    .text-font.character-display-screen {
        font-size: 12px;
    }
}

